font size style fix on small screens

--- a/src/pages/Result/Result.css
+++ b/src/pages/Result/Result.css
@@ -88,7 +88,9 @@
 }
 
 
-@media(max-width: 410px){
+
+
+@media(max-width: 550px){
 	.result-table{
 		margin: 1rem auto;
 		font-size: 80%;
@@ -96,10 +98,17 @@
 	
 }
 
-@media(max-width: 320px){
+
+@media(max-width: 350px){
 	.result-table{
-		margin: 1rem auto;
-		font-size: 60%;
+		font-size: 50%;
+	}
+	
+}
+
+@media(max-width: 290px){
+	.result-table{
+		font-size: 40%;
 	}
 	
 }
